objects/BMCServiceDesk__BMC_LANEndpoint__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__AliasAddresses__c</fullName>
        <label>Alias Addresses</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__GroupAddresses__c</fullName>
        <label>Group Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LANID__c</fullName>
        <label>LAN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MACAddress__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>